# email2llm

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
email2llm/: __init__.py  __main__.py
tests/: test_cli.py
